[gd_scene load_steps=3 format=3 uid="uid://os1lxm87y8tv"]

[ext_resource type="Script" path="res://Menus/main_menu.gd" id="1_npw4a"]
[ext_resource type="Texture2D" uid="uid://bdjnw2sl45jal" path="res://Art/Logo.png" id="2_xafvm"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_npw4a")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(6.01634e-08, 0.280878, 0.197924, 1)

[node name="Start" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -29.0
offset_right = 100.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="Level Select" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 96.0
offset_right = 100.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
text = "Select Level
"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 220.0
offset_right = 100.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 83.0
offset_right = 300.0
offset_bottom = 179.0
grow_horizontal = 2
texture = ExtResource("2_xafvm")

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Level Select" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
